[package]
name = "uno"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"
toml = "0.8"
tar = "0.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
